--- a/pymakr.conf
+++ b/pymakr.conf
@@ -7,7 +7,7 @@
     "safe_boot_on_upload": false,
     "py_ignore": [
         "pymakr.conf",
-        ".vscode",
+        ".vscode/",
         ".gitignore",
         ".git",
         "project.pymakr",
@@ -15,7 +15,11 @@
         "venv",
         ".python-version",
         ".micropy/",
-        "micropy.json"
+        "micropy.json",
+        "visualizer.py",
+        "data.txt",
+        "dev-requirements.txt",
+        "requirements.txt",
     ],
     "fast_upload": false
 }
