--- a/pymakr.conf
+++ b/pymakr.conf
@@ -19,7 +19,7 @@
         "visualizer.py",
         "data.txt",
         "dev-requirements.txt",
-        "requirements.txt",
+        "requirements.txt"
     ],
     "fast_upload": false
 }
