--- a/.gitignore
+++ b/.gitignore
@@ -141,9 +141,4 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python,visualstudiocode
 
-### Micropy Cli ###
-.micropy/
-!micropy.json
-!src/lib
-
-notes.ipynb
+stdlib/
