--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "python.linting.enabled": true,
     "python.jediEnabled": false,
     "python.linting.pylintEnabled": false,
-    "python.linting.mypyEnabled": false,
+    "python.linting.mypyEnabled": true,
     "python.languageServer": "Pylance",
     "python.linting.prospectorEnabled": false,
-    "python.linting.flake8Enabled": false
+    "python.linting.flake8Enabled": false,
+    "python.analysis.stubPath": ".micropy/micropy-cli/frozen"
 }
