added some files to py_ignore

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -19,7 +19,9 @@
         "visualizer.py",
         "data.txt",
         "dev-requirements.txt",
-        "requirements.txt"
+        "requirements.txt",
+        "__pycache__/",
+        ".mypy_cache/"
     ],
     "fast_upload": false
 }
