--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-
-# Created by https://www.gitignore.io/api/python,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=python,visualstudiocode
-
-### Python ###
-# Byte-compiled / optimized / DLL files
+.vscode/
 __pycache__/
 *.py[cod]
 *$py.class
@@ -141,7 +136,4 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python,visualstudiocode
 
-### Micropy Cli ###
 .micropy/
-!micropy.json
-!src/lib
