--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,9 @@
     "python.languageServer": "Pylance",
     "python.linting.prospectorEnabled": false,
     "python.linting.flake8Enabled": false,
-    "python.analysis.stubPath": ".micropy/micropy-cli/frozen"
+    "python.analysis.stubPath": ".micropy/micropy-cli/frozen",
+    "python.formatting.autopep8Args": [
+        "--max-line-length=120",
+        "--ignore=E226,E24,W503,E202"
+    ]
 }
