--- a/pymakr.conf
+++ b/pymakr.conf
@@ -21,7 +21,8 @@
         "dev-requirements.txt",
         "requirements.txt",
         "__pycache__/",
-        ".mypy_cache/"
+        ".mypy_cache/",
+        "pcbschem"
     ],
     "fast_upload": false
 }
